bin/testsuite/tests/compiler/src/errors/compiler3808.swg
#global testerror "Err0641"
struct A
{
    x:   s32
}

impl A
{
    func toto() {}
}

func aa()
{
    var a: A
    with a
    {
        .toto()
    }
}
